--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,10 @@
+server:
+  port: 8082
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/rates
-    username: root
+    username: admin
     password: admin123
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
