coś tam testów i mongoDb

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,6 @@
 services:
- mysql:
-    image: mysql
-    environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-      MYSQL_ROOT_PASSWORD: ""
-      MYSQL_DATABASE: rates
-      MYSQL_USER: admin
-      MYSQL_PASSWORD: admin123
+
+  mongodb:
+    image: mongo:latest
     ports:
-      - "3306:3306"
+      - "27017:27017"
