--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,15 +2,10 @@ server:
   port: 8082
 
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/rates
-    username: admin
-    password: admin123
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/rates
+      database: rates
 
   rabbitmq:
     host: localhost
