--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,5 +14,9 @@ spring:
     username: guest
     password: guest
 
+  liquibase:
+    change-log: liquibase/db.changelog.xml
+    drop-first: true
+
 app:
   queueName: ratesQueue
