--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,18 +1,17 @@
 server:
-  port: 8082
+  port: ${APP_PORT:8086}
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3309/rates
-    username: root
-    password: root
+    url: jdbc:mysql://${MYSQL_ADDRESSES:localhost:3305}/${MYSQL_DATABASE:rates}
+    username: ${MYSQL_USER:root}
+    password: ${MYSQL_PASSWORD:root}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   rabbitmq:
-    host: localhost
-    port: 5672
-    username: guest
-    password: guest
+    addresses: ${RABBIT_ADDRESSES:localhost:5671}
+    username: ${RABBIT_USERNAME:guest}
+    password: ${RABBIT_PASSWORD:guest}
 
   liquibase:
     change-log: liquibase/db.changelog.xml
